Fix z-index stacking for section backgrounds

--- a/css/front.css
+++ b/css/front.css
@@ -6,7 +6,9 @@
 	position: fixed;
 	width: 100%;
 }
-
+section.fp-section {
+    z-index: 1;
+}
 /******** CONTAINER ********/
 body > div > .main-container.container-fluid {
     padding: 0;
